--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/user-event": "^12.1.10",
     "@walletconnect/web3-provider": "^1.6.6",
     "antd": "^4.16.13",
+    "axios": "^0.24.0",
+    "fs": "^0.0.1-security",
     "moralis": "^0.0.118",
     "react": "^17.0.2",
     "react-blockies": "^1.4.1",
