--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@openzeppelin/contracts": "^4.4.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
+    "@openzeppelin/contracts": "^4.4.2",
+    "@testing-library/jest-dom": "5.11.4",
+    "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@walletconnect/web3-provider": "^1.6.6",
-    "antd": "^4.16.13",
+    "antd": "4.16.13",
     "moralis": "^0.0.118",
     "react": "^17.0.2",
     "react-blockies": "^1.4.1",
@@ -20,6 +20,10 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.17"
+  },
+  "resolutions": {
+    "//": "See https://github.com/facebook/create-react-app/issues/11773",
+    "react-error-overlay": "6.0.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,8 +54,8 @@
     ]
   },
   "devDependencies": {
-    "@truffle/hdwallet-provider": "^2.0.0",
+    "@truffle/hdwallet-provider": "2.0.0",
     "dotenv": "^11.0.0",
-    "truffle-plugin-verify": "^0.5.20"
+    "truffle-plugin-verify": "^0.5.21"
   }
 }
