--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@toolz/use-synchronous-state": "^1.0.6",
     "@walletconnect/web3-provider": "^1.6.6",
     "antd": "4.16.13",
     "moralis": "^0.0.118",
