--- a/package.json
+++ b/package.json
@@ -3,29 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.7.0",
-    "@openzeppelin/contracts": "^4.4.2",
-    "@testing-library/jest-dom": "5.11.4",
-    "@testing-library/react": "11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@toolz/use-synchronous-state": "^1.0.6",
-    "@walletconnect/web3-provider": "^1.6.6",
+    "@ant-design/icons": "4.7.0",
+    "@openzeppelin/contracts": "4.4.2",
+    "@toolz/use-synchronous-state": "1.0.6",
+    "@walletconnect/web3-provider": "1.6.6",
     "antd": "4.16.13",
-    "moralis": "^0.0.118",
-    "react": "^17.0.2",
-    "react-blockies": "^1.4.1",
-    "react-dom": "^17.0.2",
+    "moralis": "0.0.118",
+    "react": "17.0.2",
+    "react-blockies": "1.4.1",
+    "react-dom": "17.0.2",
     "react-moralis": "^0.2.6",
-    "react-papaparse": "^4.0.2",
-    "react-router": "^5.2.1",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1",
+    "react-papaparse": "4.0.2",
+    "react-router": "5.2.1",
+    "react-router-dom": "5.3.0",
     "yarn": "^1.22.17"
   },
   "resolutions": {
     "//": "See https://github.com/facebook/create-react-app/issues/11773",
-    "react-error-overlay": "6.0.9"
+    "react-error-overlay": "6.0.9",
+    "react-scripts": "4.0.3",
+    "webpack-dev-server": "3.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
