--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moralis": "0.0.118",
     "react": "17.0.2",
     "react-blockies": "1.4.1",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "17.0.2",
     "react-moralis": "^0.2.6",
     "react-papaparse": "4.0.2",
