--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
   "dependencies": {
     "@ant-design/icons": "4.7.0",
     "@openzeppelin/contracts": "4.4.2",
-    "@toolz/use-synchronous-state": "1.0.6",
     "@walletconnect/web3-provider": "1.6.6",
     "antd": "4.16.13",
-    "moralis": "0.0.118",
-    "react": "17.0.2",
+    "moralis": "^1.3.5",
+    "react": "^17.0.2",
     "react-blockies": "1.4.1",
     "react-copy-to-clipboard": "^5.0.4",
-    "react-dom": "17.0.2",
-    "react-moralis": "^0.2.6",
+    "react-dom": "^17.0.2",
+    "react-moralis": "1.3.2",
     "react-papaparse": "4.0.2",
     "react-router": "5.2.1",
     "react-router-dom": "5.3.0",
+    "react-scripts": "4.0.3",
+    "web3": "^1.7.1",
     "yarn": "^1.22.17"
   },
   "resolutions": {
-    "//": "See https://github.com/facebook/create-react-app/issues/11773",
     "react-error-overlay": "6.0.9",
     "react-scripts": "4.0.3",
     "webpack-dev-server": "3.11.1"
