--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@openzeppelin/contracts": "4.4.2",
     "@walletconnect/web3-provider": "1.6.6",
     "antd": "4.16.13",
-    "moralis": "^1.5.4",
+    "ethers": "^5.6.1",
+    "moralis": "^1.5.5",
     "react": "^17.0.2",
     "react-blockies": "1.4.1",
     "react-copy-to-clipboard": "^5.0.4",
