--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "4.16.13",
     "ethers": "^5.6.1",
     "moralis": "^1.5.5",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
     "react": "^17.0.2",
     "react-blockies": "1.4.1",
     "react-copy-to-clipboard": "^5.0.4",
@@ -56,7 +57,7 @@
     ]
   },
   "devDependencies": {
-    "@truffle/hdwallet-provider": "2.0.0",
+    "@truffle/hdwallet-provider": "2.0.4",
     "dotenv": "^11.0.0",
     "truffle-plugin-verify": "^0.5.21"
   }
