--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "4.7.0",
-    "@openzeppelin/contracts": "4.4.2",
-    "@walletconnect/web3-provider": "1.6.6",
+    "@walletconnect/web3-provider": "1.7.7",
     "antd": "4.16.13",
-    "ethers": "^5.6.1",
+    "ethers": "5.6.2",
     "moralis": "^1.5.9",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "react": "^17.0.2",
@@ -20,7 +19,7 @@
     "react-router": "5.2.1",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
-    "yarn": "^1.22.17"
+    "yarn": "1.22.18"
   },
   "resolutions": {
     "react-error-overlay": "6.0.9",
@@ -56,8 +55,9 @@
     ]
   },
   "devDependencies": {
-    "@truffle/hdwallet-provider": "2.0.4",
+    "@openzeppelin/contracts": "^4.5.0",
+    "@truffle/hdwallet-provider": "2.0.5",
     "dotenv": "^16.0.0",
-    "truffle-plugin-verify": "^0.5.21"
+    "truffle-plugin-verify": "^0.5.25"
   }
 }
