Message on mobile version added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "solidity-va.diagnostics.cdili_json.import": false
+    "solidity-va.diagnostics.cdili_json.import": false,
+    "editor.formatOnSave": true
 }
