--- a/package.json
+++ b/package.json
@@ -6,29 +6,33 @@
   "dependencies": {
     "@ant-design/icons": "4.7.0",
     "@walletconnect/web3-provider": "1.7.8",
-    "antd": "4.20.2",
-    "ethers": "5.6.2",
-    "moralis": "^1.6.0",
-    "react": "^17.0.2",
+    "antd": "4.21.0",
+    "assert": "^2.0.0",
+    "crypto-browserify": "^3.12.0",
+    "ethers": "5.6.8",
+    "https-browserify": "^1.0.0",
+    "moralis": "^1.8.0",
+    "os-browserify": "^0.3.0",
+    "react": "^18.1.0",
+    "react-app-rewired": "^2.2.1",
     "react-blockies": "1.4.1",
-    "react-copy-to-clipboard": "^5.0.4",
-    "react-dom": "^17.0.2",
-    "react-moralis": "1.3.5",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-dom": "^18.1.0",
+    "react-moralis": "1.4.0",
     "react-papaparse": "4.0.2",
-    "react-router": "5.3.1",
-    "react-router-dom": "5.3.1",
-    "react-scripts": "4.0.3",
-    "yarn": "1.22.18"
-  },
-  "resolutions": {
-    "react-scripts": "4.0.3",
-    "webpack-dev-server": "3.11.1"
+    "react-router": "6.3.0",
+    "react-router-dom": "6.3.0",
+    "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0",
+    "yarn": "1.22.19"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "set \"GENERATE_SOURCEMAP=false\" && react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject",
     "devchain": "node Truffle/scripts/devChain.js",
     "connect": "moralis-admin-cli connect-local-devchain",
     "watch:events": "moralis-admin-cli add-contract",
@@ -53,9 +57,9 @@
     ]
   },
   "devDependencies": {
-    "@openzeppelin/contracts": "^4.5.0",
-    "@truffle/hdwallet-provider": "2.0.8",
-    "dotenv": "^16.0.0",
-    "truffle-plugin-verify": "^0.5.25"
+    "@openzeppelin/contracts": "^4.6.0",
+    "@truffle/hdwallet-provider": "2.0.9",
+    "dotenv": "^16.0.1",
+    "truffle-plugin-verify": "^0.5.26"
   }
 }
