--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@ant-design/icons": "4.7.0",
     "@walletconnect/web3-provider": "1.7.8",
+    "@web3auth/web3auth": "^1.0.1",
     "antd": "4.21.0",
     "assert": "^2.0.0",
     "crypto-browserify": "^3.12.0",
