Packages update + Prettier/eslint added

--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
   "name": "pack-generator",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "author": "Pedrojok01",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "4.7.0",
-    "@walletconnect/web3-provider": "1.7.8",
-    "@web3auth/web3auth": "^1.0.1",
-    "antd": "4.21.0",
+    "@ant-design/icons": "^4.7.0",
+    "@walletconnect/web3-provider": "1.8.0",
+    "@web3auth/web3auth": "^1.1.4",
+    "antd": "^4.22.4",
     "assert": "^2.0.0",
     "crypto-browserify": "^3.12.0",
-    "ethers": "5.6.8",
+    "ethers": "^5.6.9",
     "https-browserify": "^1.0.0",
-    "moralis": "^1.8.0",
+    "moralis": "1.11.0",
     "os-browserify": "^0.3.0",
     "react": "^18.1.0",
     "react-app-rewired": "^2.2.1",
-    "react-blockies": "1.4.1",
+    "react-blockies": "^1.4.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.1.0",
     "react-moralis": "1.4.0",
-    "react-papaparse": "4.0.2",
-    "react-router": "6.3.0",
-    "react-router-dom": "6.3.0",
-    "react-scripts": "5.0.1",
+    "react-papaparse": "^4.0.4",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.0",
-    "yarn": "1.22.19"
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "set \"GENERATE_SOURCEMAP=false\" && react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
-    "devchain": "node Truffle/scripts/devChain.js",
-    "connect": "moralis-admin-cli connect-local-devchain",
-    "watch:events": "moralis-admin-cli add-contract",
-    "deploy": "node Truffle/scripts/deployContract.js"
+    "lint:check": "eslint .",
+    "lint:fix": "eslint --fix",
+    "prettier:check": "prettier --check .",
+    "prettier:fix": "prettier --write \"**/*.{sol,js,jsx,ts,tsx,css,md,json,html}\" .prettierrc --config ./.prettierrc",
+    "slither": "slither ./Truffle/contracts --truffle-build-directory ./Truffle --solc-remaps @openzeppelin=node_modules/@openzeppelin --exclude naming-convention,external-function,low-level-calls --buidler-ignore-compile"
   },
   "eslintConfig": {
     "extends": [
@@ -58,9 +59,14 @@
     ]
   },
   "devDependencies": {
-    "@openzeppelin/contracts": "^4.6.0",
-    "@truffle/hdwallet-provider": "2.0.9",
+    "@openzeppelin/contracts": "^4.7.2",
+    "@truffle/hdwallet-provider": "2.0.13",
     "dotenv": "^16.0.1",
-    "truffle-plugin-verify": "^0.5.26"
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.7.1",
+    "truffle-plugin-verify": "^0.5.27"
   }
 }
